<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/choose" />

        <TextView
            android:id="@+id/edtFilmPath"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/btnFilm"
            android:gravity="center"
            android:text="@string/choose_film"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/about_libraries_card_dark"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/choose" />


        <TextView
            android:id="@+id/edtSubPath"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/btnSub"
            android:gravity="center"
            android:text="@string/choose_sub"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/about_libraries_card_dark"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvHelpLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/help_sub"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/about_libraries_card_dark"
            android:textSize="15sp" />

        <TextView
            android:textStyle="italic|bold"
            android:layout_below="@+id/tvHelpLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/sub_link"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/about_libraries_card_dark"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btnAddEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentRight="true"
            android:text="@string/add_edit" />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:layout_toLeftOf="@+id/btnAddEdit"/>
    </RelativeLayout>
</LinearLayout>